--- a/src/components/Tile.astro
+++ b/src/components/Tile.astro
@@ -6,12 +6,12 @@ interface Props {
   title?: string,
   body?: string,
   url?: string,
-  class?: string;
+  class?: Record<string, boolean> | string,
 }
 
-const { image, title, body, url, class: className = '' } = Astro.props;
+const { image, title, body, url, class: className } = Astro.props;
 ---
-<div class={className}>
+<div class:list={[className]}>
   <div class="bg-white h-full">
     <slot name="icon">
       {image && (
