--- a/src/layouts/components/Logo.astro
+++ b/src/layouts/components/Logo.astro
@@ -5,7 +5,7 @@ import config from "@config/config.json";
 
 interface Props {
   src?: ImageMetadata;
-  class?: string;
+  class?: Record<string, boolean> | string,
 }
 
 const {
@@ -21,10 +21,10 @@ const {
   logo_text: string;
   title: string;
 } = config.site;
-const { src, class: className = '' } = Astro.props;
+const { src, class: className } = Astro.props;
 ---
 
-<a href="/" class={`navbar-brand block uppercase text-lg font-semibold ${className}`}>
+<a href="/" class:list={['navbar-brand block uppercase text-lg font-semibold', className]}>
   {
     src ? (
       <Image
