--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -6,7 +6,7 @@ import Services from "@components/Services.astro";
 import { getAllServices } from "@lib/contentParser";
 
 const title = 'Services';
-const subTitle = '"It\s okay to be valued."';
+const subTitle = '"It\'s okay to be valued."';
 
 //TODO sort?
 const services = await getAllServices();
