--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { getAllPosts } from "@lib/contentParser";
 import { sortByDate } from "@lib/utils/sortFunctions";
 
 const title = 'Value Proposition';
-const subTitle = '"It\s okay to be valued."';
+const subTitle = '"It\'s okay to be valued."';
 
 const allPosts = await getAllPosts();
 
