Fix spacing on categories and tags pages.

--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -13,7 +13,7 @@ import { BiCategoryAlt } from "react-icons/bi/index.js";
   <section>
     <div class="container text-center">
       <ContentHeader title="Categories" />
-      <ul class="space-x-4">
+      <ul class="flex flex-wrap justify-center gap-4">
         {
           categories.map((category) => (
             <li class="inline-block">
