--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -13,7 +13,7 @@ const tags = await getAllPostTags();
   <section>
     <div class="container text-center">
       <ContentHeader title="Tags" />
-      <ul class="space-x-4">
+      <ul class="flex flex-wrap justify-center gap-4">
         {
           tags.map((tag) => (
             <li class="inline-block">
