--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -1,10 +1,11 @@
 ---
 import { Image } from 'astro:assets';
-import { getEntries, type CollectionEntry } from 'astro:content';
+import { type CollectionEntry } from 'astro:content';
 
 import Tile from '@components/Tile.astro';
 
 import config from "@config/config.json";
+import { getAuthorsByPost } from "@lib/contentParser";
 import dateFormat from "@lib/utils/dateFormat";
 import { humanize,slugify } from "@lib/utils/textConverter";
 import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi/index.js";
@@ -21,7 +22,7 @@ const { posts, fluid, hideMeta, class: className } = Astro.props;
 
 const postAuthorsMap = new Map<CollectionEntry<"posts">, CollectionEntry<"authors">[]>();
 for (const post of posts) {
-  postAuthorsMap.set(post, await getEntries(post.data.authors));
+  postAuthorsMap.set(post, await getAuthorsByPost(post));
 }
 ---
 <div class:list={['row g-2', className, { 'justify-center': posts.length === 1 }]}>
