--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -1,6 +1,6 @@
 ---
-import Logo from "./Logo.astro";
-import menu from "@config/menu.json";
+import Logo from './Logo.astro';
+import menu from '@config/menu.json';
 
 interface NavigationLink {
   name: string;
