--- a/src/layouts/components/Logo.astro
+++ b/src/layouts/components/Logo.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from 'astro:assets';
 
-import config from "@config/config.json";
+import config from '@config/config.json';
 
 interface Props {
   src?: ImageMetadata;
-  class?: Record<string, boolean> | string,
+  class?: Record<string, boolean> | string;
 }
 
 const {
