--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import Base from "@layouts/Base.astro";
-import ContentHeader from "@components/ContentHeader.astro";
+import Base from '@layouts/Base.astro';
+import ContentHeader from '@components/ContentHeader.astro';
 ---
 
 <Base title="Error 404">
