--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import Base from "@layouts/Base.astro";
-import ContentHeader from "@components/ContentHeader.astro";
-import Posts from "@components/Posts.astro";
+import Base from '@layouts/Base.astro';
+import ContentHeader from '@components/ContentHeader.astro';
+import Posts from '@components/Posts.astro';
 
-import { getAllPosts } from "@lib/contentParser";
-import { sortByDate } from "@lib/utils/sortFunctions";
+import { getAllPosts } from '@lib/contentParser';
+import { sortByDate } from '@lib/utils/sortFunctions';
 
 const title = 'Value Proposition';
 const subTitle = '"It\'s okay to be valued."';
