--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,9 +1,9 @@
 ---
-import Base from "@layouts/Base.astro";
-import ContentHeader from "@components/ContentHeader.astro";
-import Services from "@components/Services.astro";
+import Base from '@layouts/Base.astro';
+import ContentHeader from '@components/ContentHeader.astro';
+import Services from '@components/Services.astro';
 
-import { getAllServices } from "@lib/contentParser";
+import { getAllServices } from '@lib/contentParser';
 
 const title = 'Services';
 const subTitle = '"It\'s okay to be valued."';
