--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -3,10 +3,10 @@ import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 
 import ContentHeader from '@components/ContentHeader.astro';
-import Social from "@components/Social.astro";
+import Social from '@components/Social.astro';
 
 interface Props {
-  author: CollectionEntry<"authors">;
+  author: CollectionEntry<'authors'>;
 }
 
 const { author } = Astro.props;
