--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -3,16 +3,17 @@ import type { CollectionEntry } from 'astro:content';
 
 import Tile from '@components/Tile.astro';
 
-import config from "@config/config.json";
+import config from '@config/config.json';
 
 interface Props {
-  projects: CollectionEntry<"portfolio">[];
-  class?: Record<string, boolean> | string,
+  projects: CollectionEntry<'portfolio'>[];
+  class?: Record<string, boolean> | string;
 }
 
 const { summary_length } = config.settings;
 const { projects, class: className } = Astro.props;
 ---
+
 <div class:list={['row g-2', className]}>
   {
     projects.map(project => (
