--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -4,27 +4,28 @@ import { type CollectionEntry } from 'astro:content';
 
 import Tile from '@components/Tile.astro';
 
-import config from "@config/config.json";
-import { getAuthorsByPost } from "@lib/contentParser";
-import dateFormat from "@lib/utils/dateFormat";
-import { humanize,slugify } from "@lib/utils/textConverter";
-import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi/index.js";
+import config from '@config/config.json';
+import { getAuthorsByPost } from '@lib/contentParser';
+import dateFormat from '@lib/utils/dateFormat';
+import { humanize, slugify } from '@lib/utils/textConverter';
+import { BiCalendarEdit, BiCategoryAlt } from 'react-icons/bi/index.js';
 
 interface Props {
-  posts: CollectionEntry<"posts">[];
+  posts: CollectionEntry<'posts'>[];
   fluid?: boolean;
   hideMeta?: boolean;
-  class?: Record<string, boolean> | string,
+  class?: Record<string, boolean> | string;
 }
 
 const { summary_length } = config.settings;
 const { posts, fluid, hideMeta, class: className } = Astro.props;
 
-const postAuthorsMap = new Map<CollectionEntry<"posts">, CollectionEntry<"authors">[]>();
+const postAuthorsMap = new Map<CollectionEntry<'posts'>, CollectionEntry<'authors'>[]>();
 for (const post of posts) {
   postAuthorsMap.set(post, await getAuthorsByPost(post));
 }
 ---
+
 <div class:list={['row g-2', className, { 'justify-center': posts.length === 1 }]}>
   {
     posts.map((post, i) => (
@@ -38,24 +39,23 @@ for (const post of posts) {
         {!hideMeta && (
           <ul slot="meta" class="mt-2 mb-2 flex flex-wrap items-center text-text p-1">
             <li class="mr-5">
-              {postAuthorsMap.get(post)!
-                .map((author) => (
-                  <a
-                    href={`/authors/${author.slug}`}
-                    class="flex items-center hover:text-primary font-medium"
-                  >
-                    {author.data.image && (
-                      <Image
-                        src={author.data.image}
-                        alt={author.data.title}
-                        height={50}
-                        width={50}
-                        class="mr-2 h-6 w-6 rounded-full"
-                      />
-                    )}
-                    <span>{author.data.title}</span>
-                  </a>
-                ))}
+              {postAuthorsMap.get(post)!.map(author => (
+                <a
+                  href={`/authors/${author.slug}`}
+                  class="flex items-center hover:text-primary font-medium"
+                >
+                  {author.data.image && (
+                    <Image
+                      src={author.data.image}
+                      alt={author.data.title}
+                      height={50}
+                      width={50}
+                      class="mr-2 h-6 w-6 rounded-full"
+                    />
+                  )}
+                  <span>{author.data.title}</span>
+                </a>
+              ))}
             </li>
             <li class="mr-5 flex items-center flex-wrap font-medium">
               <BiCalendarEdit className="mr-1 h-5 w-5 text-gray-600" />
@@ -70,7 +70,7 @@ for (const post of posts) {
                       href={`/categories/${slugify(category)}`}
                       class="mr-2 hover:text-primary font-medium"
                     >
-                      {humanize(category)}{i !== post.data.categories.length - 1 && ","}
+                      {humanize(category)}{i !== post.data.categories.length - 1 && ','}
                     </a>
                   </li>
                 ))}
