--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -3,16 +3,17 @@ import type { CollectionEntry } from 'astro:content';
 
 import Tile from '@components/Tile.astro';
 
-import config from "@config/config.json";
+import config from '@config/config.json';
 
 interface Props {
-  services: CollectionEntry<"services">[];
-  class?: Record<string, boolean> | string,
+  services: CollectionEntry<'services'>[];
+  class?: Record<string, boolean> | string;
 }
 
 const { summary_length } = config.settings;
 const { services, class: className } = Astro.props;
 ---
+
 <div class:list={['row g-2', className]}>
   {
     services.map(service => (
