--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -31,12 +31,12 @@ import {
   IoLogoWhatsapp,
   IoLogoYoutube,
   IoMail,
-} from "react-icons/io5/index.js";
+} from 'react-icons/io5/index.js';
 
 interface Props {
   //TODO type this
   source: any;
-  class?: Record<string, boolean> | string,
+  class?: Record<string, boolean> | string;
 }
 
 const { source, class: className } = Astro.props;
