--- a/src/layouts/components/Footer.astro
+++ b/src/layouts/components/Footer.astro
@@ -1,9 +1,9 @@
 ---
-import Social from "@components/Social.astro";
-import config from "@config/config.json";
-import menu from "@config/menu.json";
-import social from "@config/social.json";
-import { markdownify } from "@lib/utils/textConverter";
+import Social from '@components/Social.astro';
+import config from '@config/config.json';
+import menu from '@config/menu.json';
+import social from '@config/social.json';
+import { markdownify } from '@lib/utils/textConverter';
 
 interface NavigationLink {
   name: string;
@@ -20,7 +20,7 @@ const footer: NavigationLink[] = menu.footer;
     {/* footer menu */}
     <ul class="mb-8 space-x-4">
       {
-        footer.map((navLink) => (
+        footer.map(navLink => (
           <li class="inline-block">
             <a href={navLink.url} class="p-4 text-white/75 hover:text-white transition-all">
               {navLink.name}
