--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -1,11 +1,11 @@
 ---
-import config from "@config/config.json";
-import ContentHeader from "@components/ContentHeader.astro";
-import Authors from "@components/Authors.astro";
-import Base from "@layouts/Base.astro";
-import Pagination from "@components/Pagination.astro";
-import { getAllAuthors } from "@lib/contentParser";
-import { sortByName } from "@lib/utils/sortFunctions";
+import config from '@config/config.json';
+import ContentHeader from '@components/ContentHeader.astro';
+import Authors from '@components/Authors.astro';
+import Base from '@layouts/Base.astro';
+import Pagination from '@components/Pagination.astro';
+import { getAllAuthors } from '@lib/contentParser';
+import { sortByName } from '@lib/utils/sortFunctions';
 
 const authors = await getAllAuthors();
 const sortedAuthors = sortByName(authors);
