--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,15 +1,15 @@
 ---
-import Base from "@layouts/Base.astro";
-import ContentHeader from "@components/ContentHeader.astro";
-import Posts from "@components/Posts.astro";
-import { getAllPosts, getAllPostTags } from "@lib/contentParser";
-import taxonomyFilter from "@lib/utils/taxonomyFilter";
-import { humanize } from "@lib/utils/textConverter";
+import Base from '@layouts/Base.astro';
+import ContentHeader from '@components/ContentHeader.astro';
+import Posts from '@components/Posts.astro';
+import { getAllPosts, getAllPostTags } from '@lib/contentParser';
+import taxonomyFilter from '@lib/utils/taxonomyFilter';
+import { humanize } from '@lib/utils/textConverter';
 
 export async function getStaticPaths() {
   const tags = await getAllPostTags();
 
-  return tags.map((tag) => {
+  return tags.map(tag => {
     return {
       params: { tag },
     };
@@ -23,12 +23,12 @@ interface Props {
 const { tag } = Astro.params;
 
 const posts = await getAllPosts();
-const filterByTags = taxonomyFilter(posts, "tags", tag);
+const filterByTags = taxonomyFilter(posts, 'tags', tag);
 
-const title = humanize(tag || "")!;
+const title = humanize(tag || '')!;
 ---
 
-<Base title={title || "Tag"}>
+<Base title={title || 'Tag'}>
   <section>
     <div class="container">
       <p class="text-center mb-4">Showing Posts From</p>
