Add mising page titles.

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -12,7 +12,7 @@ const subTitle = 'Some other stuff you might like';
 const portfolioProjects = await getAllPortfolioProjects();
 ---
 
-<Base>
+<Base title={title}>
   <ContentHeader title={title} subTitle={subTitle} />
 
   <section class="container mb-16">
