--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -13,7 +13,7 @@ const totalPages = Math.ceil(posts.length / config.settings.pagination);
 const currentPosts = sortedPosts.slice(0, config.settings.pagination);
 ---
 
-<Base>
+<Base title="Blog">
   <section>
     <div class="container">
       <ContentHeader title="Blog" />
