--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -12,7 +12,7 @@ const subTitle = '"It\'s okay to be valued."';
 const services = await getAllServices();
 ---
 
-<Base>
+<Base title={title}>
   <ContentHeader title={title} subTitle={subTitle} />
 
   <section class="container mb-16">
