Cleanup superfluous Astro fragments.

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -52,7 +52,7 @@ const authors = await getAuthorsByPost(post);
           </li>
           <li class="mx-3 flex items-center flex-wrap font-medium">
             <BiCalendarEdit className="mr-1 h-5 w-5 text-gray-600" />
-            <>{dateFormat(date)}</>
+            {dateFormat(date)}
           </li>
           <li class="mx-3 flex items-center flex-wrap">
             <BiCategoryAlt className="mr-1 h-[18px] w-[18px] text-gray-600" />
