--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -22,7 +22,7 @@ const tags = await getAllPostTags();
                 class="rounded-lg bg-theme-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white flex items-center group"
               >
                 <FaHashtag className="mr-1 text-primary group-hover:text-white transition" />
-                <>{humanize(tag || '')}</>
+                {humanize(tag || '')}
               </a>
             </li>
           ))
