--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -3,6 +3,7 @@ import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 
 import Author from '@components/Author.astro';
+import Posts from '@components/Posts.astro';
 import Base from '@layouts/Base.astro';
 import { getAllAuthors, getAllPostsByAuthor } from '@lib/contentParser';
 import dateFormat from '@lib/utils/dateFormat';
@@ -48,47 +49,7 @@ const currentPosts = sortByDate(posts);
       <div class="container">
         <h2 class="mb-8 text-center font-bold text-2xl md:text-3xl">Recent Posts</h2>
         <div class:list={['row gy-4', { 'justify-center': currentPosts.length < 3 }]} >
-          {currentPosts.map(post => (
-            <div class="col-12 sm:col-6 lg:col-4">
-              {post.data.image && (
-                <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
-                  <Image
-                    class="group-hover:scale-[1.05] transition duration-300 w-full"
-                    src={post.data.image}
-                    alt={post.data.title}
-                    width={445}
-                    height={230}
-                  />
-                </a>
-              )}
-              <ul class="mt-4 text-text flex flex-wrap items-center text-sm">
-                <li class="mb-2 mr-4 flex items-center flex-wrap font-medium">
-                  <BiCalendarEdit className="mr-1 h-[16px] w-[16px] text-gray-600" />
-                  {dateFormat(post.data.date)}
-                </li>
-                <li class="mb-2 mr-4 flex items-center flex-wrap">
-                  <BiCategoryAlt className="mr-1 h-[16px] w-[16px] text-gray-600" />
-                  <ul>
-                    {post.data.categories.map((category: string, i: number) => (
-                      <li class="inline-block">
-                        <a
-                          href={`/categories/${slugify(category)}`}
-                          class="mr-2 hover:text-primary font-medium"
-                        >
-                          {humanize(category)}{i !== post.data.categories.length - 1 && ","}
-                        </a>
-                      </li>
-                    ))}
-                  </ul>
-                </li>
-              </ul>
-              <h3 class="text-xl md:text-2xl font-bold">
-                <a href={`/posts/${post.slug}`} class="block hover:text-primary transition duration-300">
-                  {post.data.title}
-                </a>
-              </h3>
-            </div>
-          ))}
+          <Posts posts={currentPosts} fluid={false} class="mb-16" />
         </div>
       </div>
     </section>
