Remove union type for "class" prop on components.
I was tired when I added that. "class" should always be string and "class:list" will always be processed and merged with "class".

--- a/src/components/CurriculumExample.astro
+++ b/src/components/CurriculumExample.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 interface Props {
   image: ImageMetadata;
   imageAlt: string;
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const { image, imageAlt, class: className } = Astro.props;
