--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -14,7 +14,7 @@ interface Props {
   posts: CollectionEntry<'posts'>[];
   fluid?: boolean;
   hideMeta?: boolean;
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const { summary_length } = config.settings;
