--- a/src/components/Share.astro
+++ b/src/components/Share.astro
@@ -11,7 +11,7 @@ interface Props {
   title: string;
   description?: string;
   slug: string;
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const { base_url } = config.site;
