--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -36,7 +36,7 @@ import {
 interface Props {
   //TODO type this
   source: any;
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const { source, class: className } = Astro.props;
