--- a/src/components/Tile.astro
+++ b/src/components/Tile.astro
@@ -6,7 +6,7 @@ interface Props {
   title?: string;
   body?: string;
   url?: string;
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const { image, title, body, url, class: className } = Astro.props;
