--- a/src/layouts/components/Logo.astro
+++ b/src/layouts/components/Logo.astro
@@ -5,7 +5,7 @@ import config from '@config/config.json';
 
 interface Props {
   src?: ImageMetadata;
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const {
