--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -7,7 +7,7 @@ import config from '@config/config.json';
 
 interface Props {
   services: CollectionEntry<'services'>[];
-  class?: Record<string, boolean> | string;
+  class?: string;
 }
 
 const { summary_length } = config.settings;
