--- a/src/layouts/components/Footer.astro
+++ b/src/layouts/components/Footer.astro
@@ -22,7 +22,7 @@ const footer: NavigationLink[] = menu.footer;
       {
         footer.map(navLink => (
           <li class="inline-block">
-            <a href={navLink.url} class="p-4 text-white/75 hover:text-white transition-all">
+            <a href={navLink.url} class="p-4 text-white/75 hover:text-white transition-all duration-200">
               {navLink.name}
             </a>
           </li>
