--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,13 +38,13 @@ const what_i_do = {
       <div class="row md:gx-4">
         <div class="sm:col-5 md:col-4">
           {author && (
-            <div class="img-cover mb-8">
+            <div class="mb-8">
               <Image
                 src={author}
                 width={295}
                 height={395}
                 alt={title}
-                class="rounded-lg w-full"
+                class="object-cover rounded-lg w-full"
               />
             </div>
           )}
